Added IdentityFramework with required dtos, also modified the pipeline for authentication

--- a/IdentityService/appsettings.json
+++ b/IdentityService/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "IdentityConnection": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorAuthDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True"
+  },
+  "Jwt": {
+    "Key": "Key4SmartProcurementSuite@00998877",
+    "Issuer": "SmartProcurementSuite",
+    "Audience": "IndividualServices",
+    "ExpireMinutes": 60
+  }
 }
