Implemented the initail dapper configurations and tested the connection by creating a test controller in vendorService. note:- This commit doest not contains the action method created for testing dapper connection. testing was done in local chnages.

--- a/ContractService/appsettings.json
+++ b/ContractService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VendorDb": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True"
+  }
 }
