--- a/ProcurementService/appsettings.json
+++ b/ProcurementService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VendorDb": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True"
+  }
 }
