Implemeted Serilog in Vendor Service and tested in both local gtext file and ms sql server.

--- a/VendorService/appsettings.json
+++ b/VendorService/appsettings.json
@@ -8,5 +8,39 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "VendorDb": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "C:\\Interview\\Self_Notes\\June-2025-project\\Serilogs\\log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True",
+          "tableName": "SerilogLogs",
+          "autoCreateSqlTable": true,
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "VendorService"
+    }
   }
+
 }
