--- a/IdentityService/appsettings.json
+++ b/IdentityService/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "IdentityConnection": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorAuthDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True"
+    "IdentityConnection": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorAuthDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True",
+    "VendorDb": "Data Source=LAPTOP-AP1367K9;Initial Catalog=VendorDb;User ID=Dredd;Password=Tribit@76695844;Trust Server Certificate=True"
   },
   "Jwt": {
     "Key": "Key4SmartProcurementSuite@00998877",
